[package]
name = "tutor_3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_dylib = "0.15.3"
iyes_perf_ui = "0.4.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_arguments = "allow"
